--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -168,9 +168,16 @@ android {
 
     packagingOptions {
         pickFirst "lib/armeabi-v7a/libc++_shared.so"
+        pickFirst "lib/armeabi-v7a/libjsc.so"
         pickFirst "lib/arm64-v8a/libc++_shared.so"
+        pickFirst "lib/arm64-v8a/libjsc.so"
+        pickFirst "lib/x86/libjsc.so"
         pickFirst "lib/x86/libc++_shared.so"
         pickFirst "lib/x86_64/libc++_shared.so"
+        // pickFirst "lib/armeabi-v7a/libc++_shared.so"
+        // pickFirst "lib/arm64-v8a/libc++_shared.so"
+        // pickFirst "lib/x86/libc++_shared.so"
+        // pickFirst "lib/x86_64/libc++_shared.so"
     }
 
     // applicationVariants are e.g. debug, release
